[package]
name = "queriable_storage"
version = "0.2.1"
authors = ["Kaladum"]
edition = "2018"
license = "MIT"
description = "queriable_storage is a create that provides the QueriableDataStore that can be queried by multiple filters."
repository = "https://github.com/Kaladum/queriable_storage"

[dependencies]
