[package]
name = "queriable_storage"
version = "0.3.0"
authors = ["Kaladum"]
edition = "2018"
license = "MIT"
description = "queriable_storage is a create that provides the QueriableDataStore that can be queried by multiple filters."
readme = "README.md"
repository = "https://github.com/Kaladum/queriable_storage"

[dependencies]
iter-set = "2.0.0"

[dev-dependencies]
chrono = "0.4"